# robot-practical-group-4

./: README.md  giveUpSadLittleRobot.py  mainpage.dox  manifest.xml
nao-world/: nao-world.pddl  nao-world.pddl~  p01.pddl  plan.3
nao_planning/nao_actions/: CMakeLists.txt  mainpage.dox  manifest.xml  nao_actions_plugins.xml
nao_planning/nao_actions/src/: actionExecutorDrop.cpp  actionExecutorKick.cpp  actionExecutorPickup.cpp  actionExecutorPickupObject.cpp  actionExecutorTurn.cpp  actionExecutorWalk.cpp  actionExecutorWalkholding.cpp  goalCreatorTidyupObjects.cpp  stateCreatorRobotPose.cpp
nao_planning/nao_config_simulation/: CMakeLists.txt  mainpage.dox  manifest.xml
nao_planning/nao_config_simulation/src/: YamlGridCreator.cpp
nao_planning/nao_domains/: mainpage.dox  manifest.xml
nao_planning/nao_domains/nao-world/: all.groups  domain.pddl  nao-world.pddl  nao-world.pddl~  output.x  output.x.sas  p01.pddl  p01.pddl~  plan.1  plan.2  plan.times  variables.groups
nao_planning/nao_executive/: mainpage.dox  manifest.xml
nao_planning/nao_executive/launch/: continual-planning-nao.launch  continual-planning-nao2.launch  execute-action-directly.launch  nao_localization_xtion.launch
nao_planning/nao_msgs/: CMakeLists.txt  manifest.xml  manifest.xml~
nao_planning/nao_msgs/src/: DropActionServer.cpp  KickActionServer.cpp  PickupActionServer.cpp  TurnActionServer.cpp  WalkActionServer.cpp  WalkHoldingActionServer.cpp  get_object_locs.cpp  get_robot_loc.cpp
nao_planning/nao_msgs/srv/: RobotLocation.srv
nao_planning/nao_world_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
nao_planning/nao_world_msgs/action/: Turn.action  Walk.action
nao_planning/nao_world_msgs/msg/: DropAction.msg  DropActionFeedback.msg  DropActionGoal.msg  DropActionResult.msg  KickAction.msg  KickActionFeedback.msg  KickActionGoal.msg  KickActionResult.msg  TurnGoal.msg  WalkHoldingAction.msg  WalkHoldingActionFeedback.msg  WalkHoldingActionGoal.msg  WalkHoldingActionResult.msg  WalkHoldingGoal.msg
nao_planning/nao_world_msgs/src/: DropActionServer.cpp  KickActionServer.cpp  ObjectLocationTester.cpp  PickupActionServer.cpp  TFtut.cpp  (+13 more)
nao_planning/tidyup_msgs/: mainpage.dox  manifest.xml
(+27 files in other folders)
